--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,8 +1,9 @@
 <html>
+    
     <head>
-        <title>Login</title>
+        <title>Login Here</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     </head>
     <body class="container">
@@ -31,35 +32,17 @@
             </div>
           </nav>
 
-
         <div class="container row">
-            <div class="jumbotron col-sm-4 pull-center">
-                <form action="/change-password" method="post">
-                    <div class="form-group">
-                        <label>Enter Your Email:</label>
-                        <input class="form-control" required type="email" name="email"/>
-                    </div>
-                    <div class="form-group">
-                        <label>Enter Your OTP Code:</label>
-                        <input class="form-control" required type="number" name="otpcode"/>
-                    </div>
-                    <div class="form-group">
-                        <label>Enter Your New Password:</label>
-                        <input class="form-control" required type="password" name="password"/>
-                    </div>
-                    <div class="form-group">
-                        <input class="btn btn-success" type="submit" value="Change Password"/>
-                    </div>
-                </form>                  
-            </div>          
+            
+           <h1>Hi <%=person.name%>, Welcome to Loure Home</h1>
+                       
         </div>
-
-
-
-
-
-
-
-        
+    <form action="/Seller" method="get">
+        <div class="seller">
+        <input class="btn btn-success" type="submit" value="Be a Seller"/>
+        </div>
+    </form>
     </body>
+
+    
 </html>
